--- a/public/jade/login.jade
+++ b/public/jade/login.jade
@@ -10,6 +10,9 @@ block content
     .row.row-code
       .icon
       input.input(type="tel",name="vcode",id="vcode",placeholder="验证码",maxlength="6")
+    .row.row-agreement
+      .checkbox.active
+      span.tap-to-read 点击阅读CC用户协议
     .row
       input.button(type="button",id="go",value="确认",disabled)
   script.
