--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -801,6 +801,8 @@ body
         border-left: 1px solid light-grey
         color: green
         padding: 0 20px
+        width: 30px
+        text-align: center
     .promos
       li:first-child
         border-top: 1px solid orange
