--- a/public/jade/recharge.jade
+++ b/public/jade/recharge.jade
@@ -1,6 +1,6 @@
 extends layout
 block content
-  h1.h1 充值
+  h1.h1 #{subtitle}
   ul.choices
     for choice in choices
       li.row(data-id="#{choice._id}")
