--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -743,7 +743,11 @@ body
         width: 80px
         text-align: left
         line-height: 2
-
+    &.cancel
+      li
+        padding-bottom: 0
+        .text
+          width: 200px
 
 #myinfos
   .h1
