--- a/public/jade/menu.jade
+++ b/public/jade/menu.jade
@@ -14,9 +14,9 @@
     li.item
       a(href="/wechat/recharge?showwxpaytitle=1") 充值
       i.icon.icon-recharge
-    li.item
-      a(href="/help") 帮助
-      i.icon.icon-help
+    //- li.item
+    //-   a(href="/help") 帮助
+    //-   i.icon.icon-help
   if user
     a.button(href="/logout") 退出登录
 
