--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -981,6 +981,13 @@ body
         padding: 0 15px
         font-size: 12px
         text-align: center
+      .service
+        font-size: 14px
+        text-align: center
+      .describe
+        font-size: 12px
+        padding: 0 10px
+        margin-top: 5px
 
 #contact
   .title
