--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,7 +67,7 @@ body.openmenu {
   font-size: 14px;
   border: none;
   border-left: 2px solid #fab44a;
-  text-align: right;
+  text-align: left;
   padding-right: 18px;
   padding-left: 10px;
   -webkit-box-sizing: border-box;
