--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -51,7 +51,7 @@ body
   font-size: 14px
   border: none
   border-left: 2px solid orange
-  text-align: right
+  text-align: left
   padding-right: 18px
   padding-left: 10px
   box-sizing: border-box
