--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -14,12 +14,13 @@ block content
           tr
             td.cars-cell
               ul
-                each car,i in user.cars || []
-                  if car["default"]
-                    li(data="#{JSON.stringify(car)}")
-                      .detail
-                        .type #{car.type}#{car.color}
-                        .number #{car.number}
+                - var defaultCars = user.cars.filter(function(car){return car["default"];});
+                - var cars = defaultCars.length ? defaultCars : [user.cars[0]];
+                each car,i in cars
+                  li(data="#{JSON.stringify(car)}")
+                    .detail
+                      .type #{car.type}#{car.color}
+                      .number #{car.number}
             td.arrow-cell
               .arrow
                 .icon
