--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -51,8 +51,9 @@ body
   font-size: 14px
   border: none
   border-left: 2px solid orange
-  text-align: left
-  padding-right: 18px
+  text-align: right
+  overflow: ellipsis
+  padding-right: 10px
   padding-left: 10px
   box-sizing: border-box
   height: 40px
