add input clear and car number validate

--- a/public/pages/tpl/addcar.jade
+++ b/public/pages/tpl/addcar.jade
@@ -7,7 +7,7 @@ include ./mixins
     input.input(placeholder="车型",data-pattern="/api/v1/cartypes/{q}")
     i.icon
   .row.number
-    input.input.number(placeholder="号牌")
+    input.input(placeholder="号牌")
     i.icon
   .row.color
     input.input(placeholder="颜色")
