--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,17 +67,33 @@ body.openmenu {
   font-size: 14px;
   border: none;
   border-left: 2px solid #fab44a;
-  text-align: right;
+  text-align: left;
   white-space: nowrap;
   overflow: hidden;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 40px;
+  padding-left: 40px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 40px;
+}
+.clear-input-wrap {
+  position: relative;
+}
+.clear-input-wrap .clear {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  width: 32px;
+  height: 32px;
+  -webkit-background-size: 22px 22px;
+  -moz-background-size: 22px 22px;
+  background-size: 22px 22px;
+  background-repeat: no-repeat;
+  background-position: 5px 5px;
+  background-image: url("../img/close-btn.png");
 }
 .button {
   width: 130px;
