--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -51,12 +51,24 @@ body
   font-size: 14px
   border: none
   border-left: 2px solid orange
-  text-align: right
+  text-align: left
   overflow: ellipsis
-  padding-right: 10px
-  padding-left: 10px
+  padding-right: 40px
+  padding-left: 40px
   box-sizing: border-box
   height: 40px
+.clear-input-wrap
+  position: relative
+  .clear
+    position: absolute
+    top: 3px
+    right: 3px
+    width: 32px
+    height: 32px
+    background-size: 22px 22px
+    background-repeat: no-repeat
+    background-position: 5px 5px
+    background-image: url("../img/close-btn.png")
 
 .button
   width: 130px
