--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -15,7 +15,7 @@ block content
             td.cars-cell
               ul
                 - var defaultCars = (user.cars || []).filter(function(car){return car["default"];});
-                - var cars = defaultCars.length ? defaultCars : user.cars.length ? [user.cars[0]] : [];
+                - var cars = defaultCars.length ? defaultCars : (user.cars && user.cars.length ? [user.cars[0]] : []);
                 each car,i in cars
                   li(data="#{JSON.stringify(car)}")
                     .detail
