--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -493,6 +493,9 @@ body
         &.active
           .icon
             background-position: 0 -27px
+      &.disabled
+        background-color: #dbdcdc
+        color: #b4b4b4
     .promo
       height: 46px
       line-height: 35px
