--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -496,6 +496,8 @@ body
       &.disabled
         background-color: #dbdcdc
         color: #b4b4b4
+        .icon
+          -webkit-filter: grayscale(1)
     .promo
       height: 46px
       line-height: 35px
