--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,7 +162,7 @@ body.openmenu {
 .popselect .choices:before,
 .popselect .choices:after {
   content: "";
-  display: block;
+  display: table;
 }
 .popselect .choices:after {
   clear: both;
@@ -251,7 +251,7 @@ body.openmenu {
 #login-form .row-agreement:before,
 #login-form .row-agreement:after {
   content: "";
-  display: block;
+  display: table;
 }
 #login-form .row-agreement:after {
   clear: both;
@@ -440,7 +440,7 @@ body.openmenu {
 .add-photo:before,
 .add-photo:after {
   content: "";
-  display: block;
+  display: table;
 }
 .add-photo:after {
   clear: both;
@@ -512,7 +512,7 @@ body.openmenu {
 #home .section .cars .selected-cars:before,
 #home .section .cars .selected-cars:after {
   content: "";
-  display: block;
+  display: table;
 }
 #home .section .cars .selected-cars:after {
   clear: both;
@@ -557,7 +557,7 @@ body.openmenu {
 #home .section .cars .selected-cars li:before,
 #home .section .cars .selected-cars li:after {
   content: "";
-  display: block;
+  display: table;
 }
 #home .section .cars .selected-cars li:after {
   clear: both;
@@ -594,7 +594,7 @@ body.openmenu {
 #home .services li:after,
 .service-select .choices .item:after {
   content: "";
-  display: block;
+  display: table;
 }
 #home .services li:after,
 .service-select .choices .item:after {
@@ -656,7 +656,7 @@ body.openmenu {
 #home .section.coupon:before,
 #home .section.coupon:after {
   content: "";
-  display: block;
+  display: table;
 }
 #home .section.coupon:after {
   clear: both;
@@ -914,7 +914,7 @@ body.openmenu {
 #preorder .order .inner .row:before,
 #preorder .order .inner .row:after {
   content: "";
-  display: block;
+  display: table;
 }
 #preorder .order .inner .row:after {
   clear: both;
@@ -966,7 +966,7 @@ body.openmenu {
 #myorders .section li:before,
 #myorders .section li:after {
   content: "";
-  display: block;
+  display: table;
 }
 #myorders .section li:after {
   clear: both;
@@ -1017,7 +1017,7 @@ body.openmenu {
 #myorders .section .row:before,
 #myorders .section .row:after {
   content: "";
-  display: block;
+  display: table;
 }
 #myorders .section .row:after {
   clear: both;
@@ -1076,7 +1076,7 @@ body.openmenu {
 #myinfos .section .row:before,
 #myinfos .section .row:after {
   content: "";
-  display: block;
+  display: table;
 }
 #myinfos .section .row:after {
   clear: both;
@@ -1099,7 +1099,7 @@ body.openmenu {
 #myinfos .section .row .wrap:before,
 #myinfos .section .row .wrap:after {
   content: "";
-  display: block;
+  display: table;
 }
 #myinfos .section .row .wrap:after {
   clear: both;
@@ -1198,7 +1198,7 @@ body.openmenu {
 #order .order .inner .row:before,
 #order .order .inner .row:after {
   content: "";
-  display: block;
+  display: table;
 }
 #order .order .inner .row:after {
   clear: both;
@@ -1245,7 +1245,7 @@ body.openmenu {
 #order-result .order .inner .row:before,
 #order-result .order .inner .row:after {
   content: "";
-  display: block;
+  display: table;
 }
 #order-result .order .inner .row:after {
   clear: both;
@@ -1288,7 +1288,7 @@ body.openmenu {
 .breakages:before,
 .breakages:after {
   content: "";
-  display: block;
+  display: table;
 }
 .breakages:after {
   clear: both;
@@ -1388,13 +1388,18 @@ body.openmenu {
 }
 #contact .map {
   width: 100%;
-  margin: 0 auto 45px auto;
+  margin: 0 auto 10px auto;
 }
 #contact .map img {
   width: 100%;
   display: block;
 }
+#contact .contacts p a {
+  margin-left: 10px;
+  color: #fff;
+}
 #contact .button-wrap {
+  margin-top: 35px;
   padding-bottom: 40px;
 }
 #contact .button-wrap a {
