--- a/public/jade/contact.jade
+++ b/public/jade/contact.jade
@@ -9,6 +9,13 @@ block content
       p 地址：上海市浦东新区居家桥路737弄金杨一街坊33号102室
     .map
       img(src="/img/map.png")
+    .contacts
+      p
+        | 应聘邮箱
+        a(href="mailto:jobs@ccmeiche.com") jobs@ccmeiche.com
+      p
+        | 建议邮箱
+        a(href="mailto:suggesion@ccmeiche.com") suggesion@ccmeiche.com
     .button-wrap
       a.button(href="/myorders") 返回订单
 
