--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -1020,11 +1020,17 @@ body
     margin: 23px auto 30px auto
   .map
     width: 100%
-    margin: 0 auto 45px auto
+    margin: 0 auto 10px auto
     img
       width: 100%
       display: block
+  .contacts
+    p
+      a
+        margin-left: 10px
+        color: #fff
   .button-wrap
+    margin-top: 35px;
     padding-bottom: 40px
     a
       text-decoration: none
