--- a/public/jade/contact.jade
+++ b/public/jade/contact.jade
@@ -15,7 +15,7 @@ block content
         a(href="mailto:jobs@ccmeiche.com") jobs@ccmeiche.com
       p
         | 建议邮箱
-        a(href="mailto:suggesion@ccmeiche.com") suggesion@ccmeiche.com
+        a(href="mailto:suggesion@ccmeiche.com") suggestion@ccmeiche.com
     .button-wrap
       a.button(href="/myorders") 返回订单
 
