--- a/public/jade/recharge.jade
+++ b/public/jade/recharge.jade
@@ -4,7 +4,11 @@ block content
   ul.choices
     for choice in choices
       li.row(data-id="#{choice._id}")
-        .price #{choice.price}cc
-        .promo #{choice.title}
+        .recharge-row
+          .promo
+            .title #{choice.title}
+            if choice.origin_price
+              .origin-price 原价¥#{choice.origin_price}
+          .price ¥#{choice.price}
   .button 提交
   +facade('recharge')
