--- a/public/jade/recharge.jade
+++ b/public/jade/recharge.jade
@@ -4,7 +4,11 @@ block content
   ul.choices
     for choice in choices
       li.row(data-id="#{choice._id}")
-        .price #{choice.price}cc
-        .promo #{choice.title}
+        if subtitle == "充值"
+          .price #{choice.price}cc
+          .promo #{choice.title}
+        else
+          .price #{choice.title}
+          .promo #{choice.describe}
   .button 提交
   +facade('recharge')
