--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -36,6 +36,10 @@ block content
             a(href='/order')
               i.fa.fa-cny
               span.nav-label 订单
+          li(class=[title=="优惠券二维码"?"active":""])
+            a(href='/promo-qrcode')
+              i.fa.fa-qrcode
+              span.nav-label 优惠券二维码
     #page-wrapper.gray-bg.dashbard-1
       .row.wrapper.border-bottom.white-bg.page-heading
         .col-lg-10
