--- a/admin/views/promo-qrcode.jade
+++ b/admin/views/promo-qrcode.jade
@@ -13,9 +13,9 @@ block main
       for item in qrcodes
         tr
           th 
-            img(src="https://api.qrserver.com/v1/create-qr-code/?data=#{item.url}&size=200x200")
-          th item.promoTitle
-          th item.createTime
+            a(href="https://api.qrserver.com/v1/create-qr-code/?data=#{item.url}&size=200x200",target="_blank") 点击查看
+          th #{item.promoTitle}
+          th #{item.createTime}
           th 
             if item.used
               | 已被"#{item.user}"使用
