消费二维码优惠券

--- a/admin/views/promo-qrcode.jade
+++ b/admin/views/promo-qrcode.jade
@@ -18,7 +18,7 @@ block main
           th #{item.createTime}
           th 
             if item.used
-              | 已被"#{item.user}"使用
+              | 已被"#{item.username}"使用
             else
               | 未使用
 
