添加服务范围查看后台

--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -40,6 +40,10 @@ block content
             a(href='/promo-qrcode')
               i.fa.fa-qrcode
               span.nav-label 优惠券二维码
+          li(class=[title=="服务范围"?"active":""])
+            a(href='/serveregion')
+              i.fa.fa-qrcode
+              span.nav-label 服务范围
     #page-wrapper.gray-bg.dashbard-1
       .row.wrapper.border-bottom.white-bg.page-heading
         .col-lg-10
