--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -42,7 +42,7 @@ block content
               span.nav-label 优惠券二维码
           li(class=[title=="服务范围"?"active":""])
             a(href='/serveregion')
-              i.fa.fa-qrcode
+              i.fa.fa-map-marker
               span.nav-label 服务范围
     #page-wrapper.gray-bg.dashbard-1
       .row.wrapper.border-bottom.white-bg.page-heading
