--- a/public/jade/order.jade
+++ b/public/jade/order.jade
@@ -18,7 +18,10 @@ block content
               p #{car.number}
         .row
           .label 地址：
-          .text #{order.address}
+          .text
+            | #{order.address}
+            br
+            | #{order.carpark}
         .row
           .label 服务：
           .text #{order.service.title}
