--- a/public/jade/myinfos.jade
+++ b/public/jade/myinfos.jade
@@ -58,7 +58,8 @@ block content
           .input-row
             input.input#input-carpark(placeholder="具体位置")
         .button-wrap
-          .button#save-address 保存地址
+          .button.remove-address#remove-address 删除地址
+          .button.save-address#save-address 保存地址
 
     .button 保存
 
