--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -852,6 +852,15 @@ body
       padding-bottom: 33px
 
 
+.addaddress-panel 
+  .button-wrap
+    padding: 40px 30px 0 30px
+    clearfix()
+  .save-address
+    float: right
+  .remove-address
+    float: left
+
 #order
   background-image: none
   background-color: #fff
@@ -1046,3 +1055,14 @@ body
     padding-bottom: 40px
     a
       text-decoration: none
+
+
+.action-edit 
+  .button
+    width: 90px
+    
+.action-add
+  .remove-address
+    display: none
+  .save-address
+    float: none
