车牌颜色trim一下，车工看到的订单展示颜色

--- a/public/jade/order.jade
+++ b/public/jade/order.jade
@@ -14,7 +14,7 @@ block content
           .row
             .label 车型：
             .text
-              p #{car.type}
+              p #{car.type} #{car.color}
               p #{car.number}
         .row
           .label 地址：
