--- a/public/jade/order-result.jade
+++ b/public/jade/order-result.jade
@@ -11,7 +11,7 @@ block content
           .row
             .label 车型
             .text
-              p #{car.type}
+              p #{car.type} #{car.color}
               p #{car.number}
         .row
           .label 服务
