--- a/admin/views/order.jade
+++ b/admin/views/order.jade
@@ -69,7 +69,10 @@ block scripts
             {
               "data": null,
               render: function(data){
-                var ms = (data.arrive_time ? new Date(data.arrive_time) : new Date()) - new Date(data.order_time);
+                var end_time = data.status == "cancel" 
+                  ? new Date(data.cancel_time) 
+                  : data.arrive_time ? new Date(data.arrive_time) : new Date();
+                var ms = end_time - new Date(data.order_time);
                 var d = moment.duration(ms);
                 return ms ? (d.minutes() + "分钟" + d.seconds() + "秒") : "--";
               }
