--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -15,6 +15,9 @@ $icon
   background-image: url("/img/icons.png")
   background-repeat: no-repeat
 
+html
+  height: 100%
+
 body,h1,h2,input,div,p,ul,ol,li,table,tr,td
   padding: 0
   margin: 0
@@ -26,6 +29,7 @@ li
 
 body
   min-height: 400px
+  height: 100%
   width: 100%
   color: #fff
   background-color: orange
