--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -447,8 +447,9 @@ body
       .price
         float: right
         padding-right: 32px
-        line-height: 42px
-        height: 42px
+        line-height: 22px
+        height: 22px
+        margin-bottom: 5px
       .arrow
         background-image: url("../img/arrow.png")
         width: 18px
