--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -121,6 +121,10 @@ body
     height: 32px
     background-repeat: no-repeat
     background-position: 7px 6px
+  .choices .inner .item .price
+    height: 22px;
+    line-height: 22px;
+    margin-bottom: 5px;
   .choices
     padding: 50px 14px 36px 14px
     clearfix()
@@ -447,9 +451,8 @@ body
       .price
         float: right
         padding-right: 32px
-        line-height: 22px
-        height: 22px
-        margin-bottom: 5px
+        line-height: 42px
+        height: 42px
       .arrow
         background-image: url("../img/arrow.png")
         width: 18px
