--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -994,6 +994,8 @@ body
       path,ellipse
         fill: white
 
+#recharge
+  height: 400px
 #recharge,#promos
   .h1
     font-size: 20px
@@ -1003,12 +1005,15 @@ body
     margin: 0 30px 30px 30px
     .row
       clearfix()
+      width: 100%
       text-align: center
       color: grey
       margin-bottom: 1px
       background-color: #fff
       padding: 10px 0
+      display: table
       .recharge-row
+        clearfix()
         display: table-row
       &.active
         color: #fff
