add gradient to html

--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -17,6 +17,9 @@ $icon
 
 html
   height: 100%
+  background-color: orange
+  background-image: linear-gradient(215deg,orange,deeporange)
+  background-repeat: no-repeat
 
 body,h1,h2,input,div,p,ul,ol,li,table,tr,td
   padding: 0
@@ -28,13 +31,8 @@ li
   list-style: none
 
 body
-  min-height: 400px
-  height: 100%
   width: 100%
   color: #fff
-  background-color: orange
-  background-image: linear-gradient(215deg,orange,deeporange)
-  background-repeat: no-repeat
   &.openmenu
     position: fixed
     width: 100%
@@ -995,12 +993,15 @@ body
         fill: white
 
 #recharge
-  height: 400px
+  height: 0;
 #recharge,#promos
   .h1
     font-size: 20px
     text-align: center
-    margin: 50px auto 10px auto
+    padding-top: 50px
+    margin: 0 auto 10px auto
+  .button
+    margin-bottom: 0;
   .choices
     margin: 0 30px 30px 30px
     .row
