--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,6 +16,13 @@
 }
 html {
   height: 100%;
+  background-color: #fab44a;
+  background-image: -webkit-linear-gradient(235deg, #fab44a, #f39600);
+  background-image: -moz-linear-gradient(235deg, #fab44a, #f39600);
+  background-image: -o-linear-gradient(235deg, #fab44a, #f39600);
+  background-image: -ms-linear-gradient(235deg, #fab44a, #f39600);
+  background-image: linear-gradient(215deg, #fab44a, #f39600);
+  background-repeat: no-repeat;
 }
 body,
 h1,
@@ -38,8 +45,6 @@ li {
   list-style: none;
 }
 body {
-  min-height: 400px;
-  height: 100%;
   width: 100%;
   color: #fff;
   background-color: #fab44a;
@@ -1358,13 +1363,18 @@ body.openmenu {
   fill: #fff;
 }
 #recharge {
-  height: 400px;
+  height: 0;
 }
 #recharge .h1,
 #promos .h1 {
   font-size: 20px;
   text-align: center;
-  margin: 50px auto 10px auto;
+  padding-top: 50px;
+  margin: 0 auto 10px auto;
+}
+#recharge .button,
+#promos .button {
+  margin-bottom: 0;
 }
 #recharge .choices,
 #promos .choices {
