--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -16,7 +16,7 @@ $icon
   background-repeat: no-repeat
 
 html
-  height: 100%
+  min-height: 100%
   background-color: orange
   background-image: linear-gradient(215deg,orange,deeporange)
   background-repeat: no-repeat
@@ -992,16 +992,12 @@ body
       path,ellipse
         fill: white
 
-#recharge
-  height: 0;
 #recharge,#promos
   .h1
     font-size: 20px
     text-align: center
     padding-top: 50px
     margin: 0 auto 10px auto
-  .button
-    margin-bottom: 0;
   .choices
     margin: 0 30px 30px 30px
     .row
