--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,7 @@
   background-repeat: no-repeat;
 }
 html {
-  height: 100%;
+  min-height: 100%;
   background-color: #fab44a;
   background-image: -webkit-linear-gradient(235deg, #fab44a, #f39600);
   background-image: -moz-linear-gradient(235deg, #fab44a, #f39600);
@@ -47,13 +47,6 @@ li {
 body {
   width: 100%;
   color: #fff;
-  background-color: #fab44a;
-  background-image: -webkit-linear-gradient(235deg, #fab44a, #f39600);
-  background-image: -moz-linear-gradient(235deg, #fab44a, #f39600);
-  background-image: -o-linear-gradient(235deg, #fab44a, #f39600);
-  background-image: -ms-linear-gradient(235deg, #fab44a, #f39600);
-  background-image: linear-gradient(215deg, #fab44a, #f39600);
-  background-repeat: no-repeat;
 }
 body.openmenu {
   position: fixed;
@@ -1362,19 +1355,12 @@ body.openmenu {
 #order-result .breakage.active ellipse {
   fill: #fff;
 }
-#recharge {
-  height: 0;
-}
 #recharge .h1,
 #promos .h1 {
   font-size: 20px;
   text-align: center;
   padding-top: 50px;
   margin: 0 auto 10px auto;
-}
-#recharge .button,
-#promos .button {
-  margin-bottom: 0;
 }
 #recharge .choices,
 #promos .choices {
