check use credit by default

--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -45,7 +45,7 @@ block content
         .text
           .label 使用积分：
           .num #{user.credit||0}
-        .use
+        .use.active
           i.icon
       if user.promo
         .promo
